tests/regression/500_INTEGRATION_TESTING/540_VALIDATION/405_import_requires_dollar_prefix/expected.txt
error[PARSE003]: import paths must start with $ alias (e.g., '$std/io', '$src/helper') - define aliases in koru.json
  --> tests/regression/500_INTEGRATION_TESTING/540_VALIDATION/405_import_requires_dollar_prefix/input.kz:16:1
    |
 16 | ~import "helper"
    | ^

